--- a/style.css
+++ b/style.css
@@ -13,6 +13,28 @@ ul {
   list-style: none;
   padding: 0;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 0.5em;
+}
+
+li:hover {
+  cursor: pointer;
+  color: royalblue;
+}
+
+.actor-box {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.popup-box {
+  background-color: cornflowerblue;
+  color: white;
+  padding: 0.25em;
+  padding-inline: 1em;
+  width: fit-content;
+}
+
+.hide {
+  display: none;
 }
